Skip to content
GitLab
Projects Groups Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
  • gnome-calendar gnome-calendar
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 432
    • Issues 432
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 44
    • Merge requests 44
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Packages and registries
    • Packages and registries
    • Container Registry
  • Monitor
    • Monitor
    • Incidents
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Wiki
    • Wiki
  • Snippets
    • Snippets
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • GNOMEGNOME
  • gnome-calendargnome-calendar
  • Issues
  • #470
Closed
Open
Issue created Oct 07, 2019 by Sébastien Bacher@seb128

Segfault in gdk_rgba_to_string

The issue started being reported with the GNOME 3.34 updates in Ubuntu, there is no useful user description at the moment though...

backtrace from the current version

#0  0x00007f7abae2f8bd in gdk_rgba_to_string () from /srv/daisy.ubuntu.com/production/cache/Ubuntu 19.10/cache-t6ZyDy/sandbox/Ubuntu 19.10/amd64/report-sandbox/usr/lib/x86_64-linux-gnu/libgdk-3.so.0.2404.7
No symbol table info available.
#1  0x000055e04129f4cf in process_sources (self=0x55e041db31e0) at ../src/gui/gcal-application.c:123
        color_str = 0x0
        color = <optimized out>
        calendar = <optimized out>
        error = 0x0
        new_css_data = 0x0
        new_css_snippets = 0x55e04203bb00
        manager = <optimized out>
        calendars = 0x55e041ffa6e0
        l = 0x55e041ffa6a0
        color_id = <optimized out>
        arr_length = <optimized out>
        i = <optimized out>
#2  0x00007f7aba8ba6e2 in g_closure_invoke () from /srv/daisy.ubuntu.com/production/cache/Ubuntu 19.10/cache-t6ZyDy/sandbox/Ubuntu 19.10/amd64/report-sandbox/usr/lib/x86_64-linux-gnu/libgobject-2.0.so.0.6200.0
No symbol table info available.
#3  0x00007f7aba8ce544 in signal_emit_unlocked_R () from /srv/daisy.ubuntu.com/production/cache/Ubuntu 19.10/cache-t6ZyDy/sandbox/Ubuntu 19.10/amd64/report-sandbox/usr/lib/x86_64-linux-gnu/libgobject-2.0.so.0.6200.0
No symbol table info available.
#4  0x00007f7aba8d7327 in g_signal_emit_valist () from /srv/daisy.ubuntu.com/production/cache/Ubuntu 19.10/cache-t6ZyDy/sandbox/Ubuntu 19.10/amd64/report-sandbox/usr/lib/x86_64-linux-gnu/libgobject-2.0.so.0.6200.0
No symbol table info available.
#5  0x00007f7aba8d79b3 in g_signal_emit () from /srv/daisy.ubuntu.com/production/cache/Ubuntu 19.10/cache-t6ZyDy/sandbox/Ubuntu 19.10/amd64/report-sandbox/usr/lib/x86_64-linux-gnu/libgobject-2.0.so.0.6200.0
No symbol table info available.
#6  0x000055e0412ba547 in on_calendar_created_cb (source_object=<optimized out>, result=<optimized out>, user_data=user_data@entry=0x55e041de7980) at ../src/core/gcal-manager.c:305
        error = 0x7f7aa80019c0
        refresh_extension = 0x0
        offline_extension = <optimized out>
        calendar = 0x0
        self = 0x55e041de7980
        client = 0x0
        source = 0x0
        visible = <optimized out>
#7  0x00007f7aba9b4f89 in g_task_return_now (task=0x55e041dc68d0) at ../../../gio/gtask.c:1212
No locals.

It looks a bit similar to bug #467 (closed) but in those report e-d-s is the current 3.34.0 version

Assignee
Assign to
Time tracking